# hicache-plus-plus

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
assets/: ICON_BRIEF.md
benchmarks/: MICROBENCH_RESULTS.md  eigencache_timing.py  forecast_microbench.py
benchmarks/dit_imagenet/: RESULTS_DIT.md  bench_dit.py  compute_fid.py  run_sweep.sh  visual_check.py
benchmarks/dit_imagenet/results/: queue_all.sh  queue_resume.sh  queue_retime.sh
hicache_pp/: __init__.py  dmd.py  hermite.py  tree.py
integrations/: README.md
integrations/patches/: README.md  fast-sam3d-slat.patch  hunyuan3d-2-mini-worker.patch  hunyuan3d-2.1-loop.patch  sam3d-flow-matching.patch
integrations/pr_drafts/: README.md
integrations/pr_drafts/cache-dit/: 0001-dmd-calibrator.patch  PR_DESCRIPTION.md
integrations/pr_drafts/cache-dit/flux_ab/: README.md  timings.json  timings_dev.json
integrations/pr_drafts/cache4diffusion/: 0001-flux-dmd-basis.patch  PR_DESCRIPTION.md
integrations/pr_drafts/diffusers/: 0001-taylorseer-dmd-basis.patch  PR_DESCRIPTION.md
integrations/pr_drafts/flux_hth/: RESULTS.md  _eval.json  eval_hth.py  flux_hth.py  make_viz.py
results/: RESULTS.md
tests/: run_tests.py  test_bench_checkpoint.py  test_bench_dit.py  test_version.py
