[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hicache-pp"
version = "1.2.0.dev0"
description = "Drop-in TaylorSeer/HiCache basis upgrade: training-free diffusion acceleration via Dynamic Mode Decomposition (Prony) exponential feature forecasting"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Krishi Attri", email = "kattri@snu.ac.kr" }]
keywords = [
    "diffusion-acceleration", "feature-caching", "training-free", "flux", "dit",
    "dynamic-mode-decomposition", "prony", "diffusion", "flow-matching",
    "inference-acceleration", "hicache", "taylorseer",
]
dependencies = ["torch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Archerkattri/hicache-plus-plus"
Repository = "https://github.com/Archerkattri/hicache-plus-plus"

[tool.setuptools.packages.find]
include = ["hicache_pp*"]
